[package]
name = "h3_fuzz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.2"
memchr = "2.8.3"
memmap2 = "0.9.11"
quinn = "0.11.11"
rustls = { version = "0.23.41", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
webpki-roots = "1.0.8"
